frontend/overlays/stage/blue/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  template:
    spec:
      containers:
        - name: frontend-container
          image: vikasprince/fullstack-frontend:v1.1.1
