frontend/overlays/stage/blue/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
spec:
  selector:
    app: frontend-blue
